<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="app.atti.Activities.Register.RegisterActivity5">

    <ImageView
        android:id="@+id/step1_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-110dp"
        android:layout_marginTop="-110dp"
        android:layout_marginRight="-110dp"
        android:layout_marginBottom="-110dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_success_make_account_wave" />

    <TextView
        android:id="@+id/step5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/nanumsquarer"

        android:text="@string/step5_0"
        android:textColor="#fff"
        android:textSize="43sp" />



    <TextView
        android:id="@+id/step5_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step5"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/nanumsquarer"

        android:lineHeight="40sp"
        android:text="@string/step5"
        android:textColor="#fff"
        android:textSize="28sp" />


    <LinearLayout
        android:id="@+id/reg5_LL_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step5_end"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquarer"

            android:text="@string/look_around"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:backgroundTint="#fff"
            android:src="@drawable/ic_nextpage_white" />
    </LinearLayout>

</RelativeLayout>