<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="app.atti.justbreathe.atti.Activity.Activities.Register.RegisterActivity4">

    <ImageView
        android:id="@+id/step1_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="-10dp"
        android:scaleType="fitStart"
        android:src="@drawable/ic_wave_register" />

    <TextView
        android:id="@+id/step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/nanumbarungothic"
        android:text="Step 4"
        android:textColor="#fff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/areyoukorean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step4"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumbarungothic"
        android:text="@string/step1"
        android:textColor="#fff"
        android:textSize="32sp" />

    <Button
        android:id="@+id/reg4_btn_korean"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/areyoukorean"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/register_edittext_background"
        android:fontFamily="@font/nanumbarungothic"
        android:text="@string/step1_Korean"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/reg4_btn_foreigner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/reg4_btn_korean"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/register_edittext_background"
        android:fontFamily="@font/nanumbarungothic"
        android:text="@string/step1_Foreigner"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

</RelativeLayout>