<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/drawer_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/drawer_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp"
        tools:text="사용자" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/drawer_chatting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatting"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/drawer_recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommend"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/drawer_Medical_Convenience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Medical_Convenience"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="#fff" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>