<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Activity.Activities.Register.RegisterActivity1">

    <ImageView
        android:id="@+id/step1_shape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:layout_marginTop="-10dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-10dp"
        android:src="@drawable/ic_wave_register" />

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="120dp"
        android:text="Step 1"
        android:textColor="#fff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/whatisyouremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step1"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/step3"
        android:textColor="#fff"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/reg1_et_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/whatisyouremail"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="115dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/register_edittext_background"
        android:hint="@string/step3_hint"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/reg1_LL_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg1_et_email"
        android:layout_alignParentRight="true"
        android:layout_marginTop="75dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_nextpage" />
    </LinearLayout>


</RelativeLayout>